overlapping fixed

--- a/app/static/main.css
+++ b/app/static/main.css
@@ -116,7 +116,7 @@ form {
   .form-control {
     display: block;
     width: 19vw;
-    height: 2.8vw;
+    height: 45px;
     padding: 6px 12px;
     font-size: 16px;
     line-height: 1.5;
